# MTEL-Mem

./: .gitignore  README.md  pyproject.toml  validation_expectations.json
artifacts/: README.md
artifacts/paper_summaries/: query_target_alignment.dataset_pairwise.csv  query_target_alignment.dataset_target.csv  query_target_alignment.json  query_target_alignment.records.csv  query_target_alignment.run_pairwise.csv  query_target_alignment.run_target.csv  query_target_alignment.summary.txt  target_qa_alignment.dataset.csv  target_qa_alignment.density.csv  target_qa_alignment.json  target_qa_alignment.summary.txt  target_qa_manifest.csv  target_qa_manifest.json  target_qa_manifest.summary.txt
artifacts/semantic_audit/: all_audit_cases.csv  judged_cases.csv  locomo_allminilm_audit_cases.csv  locomo_bge_m3_audit_cases.csv  locomo_lexical_audit_cases.csv  locomo_mxbai_audit_cases.csv  longmemeval_allminilm_audit_cases.csv  longmemeval_bge_m3_audit_cases.csv  longmemeval_lexical_audit_cases.csv  longmemeval_mxbai_audit_cases.csv
artifacts/validation/: category_target_sensitivity.json  external_semantic_review_disagreement_adjudication.csv  external_semantic_review_set_36.answer_key.csv  external_semantic_review_set_36.csv  figure_metrics.json  (+8 more)
examples/: minimal_ranked_trace.jsonl  minimal_target_mappings.jsonl
manifests/: locomo.json  longmemeval_s.json
reports/: example_score.json  validation_report.json  validation_report.md
tests/: test_example_pipeline.py  test_manifests.py  test_metrics.py  test_premem_locomo_export.py  test_validation.py
(+90 files in other folders)
