[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mtel-mem"
version = "0.1.0"
description = "Multi-target evaluation layer for transformed conversational memory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mtel-mem = "mtel_mem.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
